--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<script src="https://unpkg.com/terser@3.8.2/dist/browser.bundle.js"></script>
 
-<h2>Terser-online</h2>
+<h2>Terser-online (ES6 minifier based on <a href="https://github.com/fabiosantoscode/terser">terser</a>)</h2>
 <input type=checkbox checked> show options
 <br>
 <br>
@@ -17,7 +17,7 @@
 <textarea id=output>// output</textarea>
 
 <style>
-h2 { margin: 0 }
+h2 { margin: 0 0 5px; }
 textarea { width: 48vw; height: calc(100vh - 100px); margin: 0 1vw 0 0; float: left; }
 #options { display: none; }
 :checked ~ #options { display: block; }
