--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<script src="https://unpkg.com/terser@3.8.2/dist/browser.bundle.js"></script>
 
 <h2>Terser-online (ES6 minifier based on <a href="https://github.com/fabiosantoscode/terser">terser</a>)</h2>
-<input type=checkbox checked> show options
+<input type=checkbox checked> show <a href="https://github.com/fabiosantoscode/terser#compress-options">options</a>
 <br>
 <br>
 <textarea id=input>// input</textarea>
