--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ input[size="1"] { width: 15px }
 
 <script>
 check.checked = 0;
-//input.value = "";
-//output.value = "";
+input.value = "";
+output.value = "";
 onload = function(){
   oninput = function(){
     try{eval("opt = " + options.value)} catch(e){ opt = {} }
